# CarbonMapping

./: .env.example  .gitignore  README.md  audit.py  carbon_intensity_calc.py  pull_and_sync_energy_data.py  requirements.txt  test_query.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/Marts/: daily_rollup.sql  hourly_intensity.sql  mart_fuel_mix.sql
dbt/models/Staging/eia/: eia_models.yml  stg_eia__energy_data_w_fuel_type.sql
dbt/seeds/: emissions_factors.csv  seeds.yml
my-cdk-project/: app.py  cdk.context.json
my-cdk-project/my_cdk_project/: my_cdk_project_stack.py
my-cdk-project/tests/unit/: test_my_cdk_project_stack.py
orchestra/: pyproject.toml  readme.md
orchestra/carbonmapping_dagster/: __init__.py  definitions.py
orchestra/carbonmapping_dagster/assets/: __init__.py  dbt_assests.py  eia_ingestion.py
orchestra/carbonmapping_dagster/ingestion/: eia_client.py
