[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonmapping-dagster"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dagster-postgres",
    "dbt-postgres",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carbonmapping_dagster*"]

[tool.dagster]
module_name = "carbonmapping_dagster.definitions"
